--- a/hello-world-app/JenkinsFile
+++ b/hello-world-app/JenkinsFile
@@ -44,21 +44,25 @@ pipeline {
       }
     }
     stage('Update Deployment File') {
-        environment {
-            GIT_REPO_NAME = "DevOps-CICD-Workflow"
-            GIT_USER_NAME = "SaiAnilTekuri"
-        }
-        steps {
-            withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                sh '''
-                    BUILD_NUMBER=${BUILD_NUMBER}
-                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" hello-world-app-manifests/deployment.yml
-                    git add hello-world-app-manifests/deployment.yml
-                    git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                    git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-                '''
-            }
+    environment {
+        GIT_REPO_NAME = "DevOps-CICD-Workflow"
+        GIT_USER_NAME = "SaiAnilTekuri"
+    }
+    steps {
+        withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+            sh '''  
+                git config user.email "saianiltekuri98@gmail.com"
+                git config user.name "SaiAnilTekuri"
+                
+                git checkout main
+                BUILD_NUMBER=${BUILD_NUMBER}
+                sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" hello-world-app-manifests/deployment.yml
+                git add hello-world-app-manifests/deployment.yml
+                git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+                git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+            '''
         }
     }
+   }
   }
 }
