--- a/hello-world-app/JenkinsFile
+++ b/hello-world-app/JenkinsFile
@@ -50,7 +50,8 @@ pipeline {
     }
     steps {
         withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-            sh '''  
+            sh '''
+                pwd
                 git config user.email "saianiltekuri98@gmail.com"
                 git config user.name "SaiAnilTekuri"
                 
