--- a/hello-world-app/JenkinsFile
+++ b/hello-world-app/JenkinsFile
@@ -51,7 +51,8 @@ pipeline {
     steps {
         withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
             sh '''
-                cd 
+                git clone https://github.com/SaiAnilTekuri/DevOps-CICD-Workflow.git
+                cd DevOps-CICD-Workflow
                 git config --global user.email "saianiltekuri98@gmail.com"
                 git config --global user.name "SaiAnilTekuri"
                 
