Update deployment image to version 1

--- a/hello-world-app-manifests/deployment.yml
+++ b/hello-world-app-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: hello-world-app
-        image: saianiltekuri/hello-world-app:replaceImageTag
+        image: saianiltekuri/hello-world-app:1
         ports:
         - containerPort: 8080
